solved two probs of qual round

--- a/practice/2014/QualificationRound/QualificationRound/QualificationRound.csproj
+++ b/practice/2014/QualificationRound/QualificationRound/QualificationRound.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeJamHelper.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="MagicTrick.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
