done with qualification 2015

--- a/2015/QualificationRound/QualificationRound/QualificationRound.csproj
+++ b/2015/QualificationRound/QualificationRound/QualificationRound.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeJamHelper.cs" />
-    <Compile Include="ProgramA.cs" />
+    <Compile Include="ProblemD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
